@@ -37,8 +37,6 @@ class SATPreprocessor;
 class VariableList;
 class VariableSet;
 
-class dmcs::RelSatSolver;
-
 //////////////////////////////////////////////////////////////////////////////////////////////////
 // Class Definitions
 
